--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <main>
   <h1>GitHub Pages のサンプルです</h1>
-  <button onclick="search">検索</button>
+  <button onclick="search()">検索</button>
 </main>
 
 <script>
