--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script>
 console.log('GitHub Pages Sample');
 function search() {
-  aleart('きてます')
+  alert('きてます')
   navigator.bluetooth.requestDevice({
     acceptAllDevices: true
   }).then(device => {
